[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprite-ddd0001.png" type="Texture" id=1]
[ext_resource path="res://Assets/PublicPixel-z84yD.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Menu/Start.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -275, 15 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
margin_left = 23.0
margin_top = 59.0
margin_right = 533.0
margin_bottom = 214.0
custom_fonts/normal_font = SubResource( 1 )
text = "   MADE FOR 
GODOT WILD JAM

"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="ColorRect"]
margin_left = 23.0
margin_top = 180.0
margin_right = 667.0
margin_bottom = 335.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 1 )
text = "THEME: 

"
scroll_active = false

[node name="RichTextLabel4" type="RichTextLabel" parent="ColorRect"]
margin_left = 155.0
margin_top = 185.0
margin_right = 799.0
margin_bottom = 350.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = SubResource( 1 )
text = "Assembly Required"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="ColorRect"]
margin_left = 31.0
margin_top = 237.0
margin_right = 675.0
margin_bottom = 392.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 1 )
text = "WILDCARDS USED: 

"
scroll_active = false

[node name="RichTextLabel5" type="RichTextLabel" parent="ColorRect"]
margin_left = 55.0
margin_top = 284.0
margin_right = 699.0
margin_bottom = 449.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = SubResource( 1 )
text = ">FOUR COLOR LIMIT

>THERMOMETER"
scroll_active = false

[node name="RichTextLabel6" type="RichTextLabel" parent="ColorRect"]
margin_left = 23.0
margin_top = 375.0
margin_right = 667.0
margin_bottom = 540.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = SubResource( 1 )
text = "I HOPE YOU LIKE IT"
scroll_active = false

[node name="Border" type="Sprite" parent="."]
position = Vector2( 256, 256 )
z_index = 66
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
